source/stylesheets/navigation.sass
@import 'variables'

.main-nav
  position: relative

.nav, .horizontal-nav-links
  margin: 0
  padding: 0
  list-style: none

.nav
  +inline-flex
  +align-items(center)
  +justify-content(center)

  @media screen and (max-width: $break-small)
    +justify-content(space-evenly)

.nav-menu-item
  color: $text-color
  margin: 0 2px
  position: relative

  @media screen and (max-width: $break-small)
    margin: 0

  > a
    color: $text-color
    display: block
    font-size: 25px
    padding: 5px 25px
    position: relative
    text-decoration: none

    @media screen and (max-width: $break-small)
      font-size: 20px
      padding: 2px 15px

.horizontal-nav-links
  +transform-origin(100% 0%)
  +transform(translateX(-50%) scaleY(0.75))
  box-shadow: 0 30px 40px -10px rgba(0,0,0,0.20)
  background: $background-color
  left: 50%
  line-height: 1.25em
  min-width: 300px
  max-height: 500px
  opacity: 0
  overflow-y: scroll
  position: absolute
  top: 100%
  z-index: 0
  visibility: hidden

  @media screen and (max-width: $break-small)
    +transform(none)
    +transition(opacity .15s)
    +transform-origin(0)
    -webkit-overflow-scrolling: touch
    left: 0
    max-height: 100vh
    max-width: 100%
    padding-bottom: 140px
    padding-top: 75px
    position: fixed
    top: 0
    width: 100%
    height: 100vh
    z-index: 101

.horizontal-nav-link
  position: static

  a
    +transition(.1s linear all)
    color: $text-color
    display: block
    padding: 20px 10px
    text-decoration: none

    @media screen and (max-width: $break-small)
      padding: 20px 60px

  &:hover, &:focus
    background-color: $accent-color

    a
      color: $link-hover-color
      text-decoration: underline

.nav li:focus > a,
.nav li:hover > a,
.nav li:focus-within > a
  color: $link-hover-color

ul.show-menu
  +transition(all 0.3s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out)
  +transform(scale(1) translateY(0) translateX(-50%))
  visibility: visible
  opacity: 1
  transition-delay: 0s

  @media screen and (max-width: $break-small)
    +transition(opacity .2s ease-out)
    +transform(none)

.close-nav-menu
  display: none
  padding: 10px
  position: fixed
  right: 15px
  top: 15px

  @media screen and (max-width: $break-small)
    display: block

